--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,8 @@ jobs:
         uses: lukka/run-cmake@v10.3
         with:
           configurePreset: compile-commands
+      - run: |
+          cat ./cmake-build-*/compile_commands.json
       - name: Run clang-tidy
         run: |
           clang-tidy -p ./cmake-build-* ./*cpp*
@@ -61,6 +63,8 @@ jobs:
         uses: lukka/run-cmake@v10.3
         with:
           workflowPreset: compile-commands
+      - run: |
+          cat ./cmake-build-*/compile_commands.json
       - name: Run clang-tidy
         run: |
           clang-tidy -p ./cmake-build-* ./*cpp*
